--- a/src/org/celllife/idart/messages/messages.properties
+++ b/src/org/celllife/idart/messages/messages.properties
@@ -510,3 +510,26 @@ alerta.button.fechar.tooltip=Clique este bot\u00e3o para sair deste ecr\u00e3 de
 sync.title=Sincroniza\u00e7\u00e3o das bases de dados iDART e SESP (Levantamentos de Medicamentos)
 sync.title2=Importa\u00e7\u00e3o de Pacientes do SESP
 
+
+gaac.screen.tooltip.add=Adicionar Novo Gaac
+Gaac.button.title.add=Adicionar Gaac
+Gaac.button.title.update=Actualizar Gaac
+gaac.screen.tooltip.update=Actualizar um Gaac Existente
+gaac.group.particulars=Dados do Gaac
+gaac.group.name=Nome
+gaac.group.surname=Apelido
+gaac.group.identifier=Identificador
+gaac.group.focal.point=NID Ponto Focal
+gaac.group.focal.point.name=Nome Ponto Focal
+gaac.group.startdate=Data Inicio
+GeneralAdmin.group.gaac.title=Administracao de Gaac's
+gaac.group.enddate=Data Fim
+gaac.group.description=Descricao
+gaac.label.startdate=Data Inicio
+gaac.group.enddate=Data Fim
+gaac.label.notes=Notas do Gaac
+gaac.label.affinity=Tipo de Afinidade
+gaac.label.crumbled=Desintegrado
+gaac.button.startdate.tooltip=Data do Inicio do Grupo
+gaac.button.enddate.tooltip=Data do fim do Grupo
+gaac.group.add.member=Adicionar Membro
