--- a/src/org/celllife/idart/messages/messages.properties
+++ b/src/org/celllife/idart/messages/messages.properties
@@ -462,6 +462,7 @@ reports.stockTake=Relat\u00f3rio de Invent\u00e1rio
 reports.transactionLog=Relat\u00f3rio de Log de transa\u00e7\u00f5es
 reports.LinhasTerapeuticas=Linhas Terapeuticas
 reports.segundaslinhasavaliacao=Segundas Linhas Avalia\u00e7\u00e3o
+reports.confirmaabandonos=Lista de Abandonos vs OpenMRS
 StockControl.button.deletions=Apagar Stock, Prescri\u00e7\u00e3o && Frascos
 StockControl.button.deletions.tooltip=Pressione este bot\u00e3o para devolver ao stock pacotes n\u00e3o dispensados.
 StockControl.button.destroyStock=Destruir Stock
