--- a/src/org/celllife/idart/messages/messages.properties
+++ b/src/org/celllife/idart/messages/messages.properties
@@ -438,6 +438,7 @@ reports.episodesStartedAndEnded=Hist\u00f3rias clinica que Iniciaram ou que term
 reports.episodeStatistics=Estat\u00edstica das hist\u00f3rias clinica
 reports.missedAppointments=Faltosos e/ou Abandonos 
 reports.missedAppointmentsNew=Faltosos ao Levantamento de ARV's
+reports.missedAppointmentsChamadas=Relat\u00f3rio para Chamadas de Faltosos em DT
 reports.missedAppointmentsDT = Faltosos e/ou Abandonos na Dispensa Trimestral
 reports.missedAppointmentsApss = Faltosos ao Levantamento de ARV's para APSS
 reports.fila =FILA de Pacientes Registados em um Periodo
