Commit Alteracoes FARMAC

--- a/src/org/celllife/idart/messages/messages.properties
+++ b/src/org/celllife/idart/messages/messages.properties
@@ -465,6 +465,8 @@ reports.LinhasTerapeuticas=Linhas Terapeuticas
 reports.segundaslinhasavaliacao=Segundas Linhas Avalia\u00e7\u00e3o
 reports.confirmaabandonos=Lista de Abandonos vs OpenMRS
 reports.indicadoresmensais=Relat\u00f3rio de Indicadores Mensais
+reports.pacientesSemDT=Pacientes dispensados mais de 2 meses sem DT
+reports.cohortDT=Cohort Dispensa Trimestral
 StockControl.button.deletions=Apagar Stock, Prescri\u00e7\u00e3o && Frascos
 StockControl.button.deletions.tooltip=Pressione este bot\u00e3o para devolver ao stock pacotes n\u00e3o dispensados.
 StockControl.button.destroyStock=Destruir Stock
