Actualiza Dispensa Trimestreal na Prescricao

--- a/src/org/celllife/idart/messages/messages.properties
+++ b/src/org/celllife/idart/messages/messages.properties
@@ -442,6 +442,7 @@ reports.missedAppointmentsChamadas=Lista Faltosos para Chamadas de Apoio
 reports.missedAppointmentsDT = Faltosos e/ou Abandonos na Dispensa Trimestral
 reports.missedAppointmentsApss = Faltosos ao Levantamento de ARV's para APSS
 reports.fila =FILA de Pacientes Registados em um Periodo
+reports.referidos = Pacientes Referidos Para Outra Farm\u00e1cia
 reports.secondLine =Relatorio de Pacientes em Segunda Linha
 reports.losttofollowup=Pacientes Abandono
 reports.losttofollowupreturned=Pacientes que Abandonaram e Retornaram
